--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ exclude =
     */migrations/,
     venv/,
     env/
+    api_yamdb/users/management/commands/fulldb.py
 per-file-ignores =
     */settings.py:E501
 max-complexity = 10
