--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ exclude =
     venv/,
     env/
     api_yamdb/users/management/commands/fulldb.py
+    api_yamdb/api/
 per-file-ignores =
     */settings.py:E501
 max-complexity = 10
