--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
-name: Django-app workflow
+name: api_yamdb workflow
 
-on: [push]
-
+on:
+  push:
+    branches:
+      - master
+    
 jobs:
   tests:
     runs-on: ubuntu-latest
@@ -15,54 +18,54 @@ jobs:
 
     - name: Install dependencies
       run: | 
-        # обновление pip
         python -m pip install --upgrade pip 
-        # установка flake8 и его плагинов
-        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        # установка зависимостей
-        pip install -r requirements.txt 
+        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort pytest
+        pip install -r api_yamdb/requirements.txt 
 
     - name: Test with flake8 and django tests
       run: |
-        # запуск проверки проекта по flake8
-        python -m flake8
-  
+        python -m flake8 
+        pytest
+
   build_and_push_to_docker_hub:
-      name: Push Docker image to Docker Hub
-      runs-on: ubuntu-latest
-      needs: tests
-      steps:
-        - name: Check out the repo
-          # Проверка доступности репозитория Docker Hub для workflow
-          uses: actions/checkout@v2 
-        - name: Set up Docker Buildx
-          # Вызов сборщика контейнеров docker
-          uses: docker/setup-buildx-action@v1 
-        - name: Login to Docker 
-          # Запуск скрипта авторизации на Docker Hub
-          uses: docker/login-action@v1 
-          with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
-        - name: Push to Docker Hub
-          # Пуш образа в Docker Hub 
-          uses: docker/build-push-action@v2 
-          with:
-            push: true
-            tags: ignatdan/api_yamdb:latest
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1 
+      - name: Login to Docker 
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2 
+        with:
+          file: api_yamdb/Dockerfile
+          context: api_yamdb/
+          push: true
+          tags: ignatdan/api_yamdb:latest 
+
   deploy:
-      runs-on: ubuntu-latest
-      needs: build_and_push_to_docker_hub
-      steps:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    if: github.ref == 'refs/heads/master' || 'refs/heads/main'
+    steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
             sudo docker-compose stop
+            sudo docker-compose rm web
             rm .env
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
@@ -71,7 +74,8 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            sudo docker-compose up -d
+            sudo docker-compose up -d --build
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
@@ -79,6 +83,6 @@ jobs:
     - name: send message
       uses: appleboy/telegram-action@master
       with:
-        to: ${{ secrets.TELEGRAM_TO }}
+        to: ${{ secrets.TELEGRAM_ID }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: ${{ github.workflow }} успешно выполнен!
