--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,38 +1,42 @@
 version: '3.8'
 
-services: 
-  db: 
+services:
+  db:
     image: postgres:13.0-alpine
-    volumes:  
+    container_name: postgres13
+    environment:
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    volumes:
       - /var/lib/postgresql/data/
-    env_file: 
+    env_file:
       - ./.env
+
   web:
     container_name: web
-    image: ignatdan/api_yamdb:latest
+    image: maxzak/api_yamdb:latest
     restart: always
-    volumes: 
+    volumes:
       - static_value:/app/static/
       - media_value:/app/media/
-    depends_on: 
+    depends_on:
       - db
-    env_file: 
+    env_file:
       - ./.env
 
-  nginx: 
-    image: nginx:1.19.3
-    ports: 
+  nginx:
+    container_name: nginx
+    image: nginx:1.21.3-alpine
+    ports:
       - "80:80"
-    volumes: 
-      - /nginx/default.conf:/etc/nginx/conf.d/default.conf
-
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - static_value:/var/html/static/
-
       - media_value:/var/html/media/
-
-    depends_on: 
+    depends_on:
       - web
 
-volumes: 
-  static_value: 
+volumes:
+  static_value:
   media_value:
