--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -20,7 +20,7 @@ jobs:
       run: | 
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort pytest
-        pip install -r requirements.txt 
+        pip install -r api_yamdb/requirements.txt
 
     - name: Test with flake8 and django tests
       run: |
@@ -61,7 +61,6 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
             sudo docker-compose stop
