--- a/api_yamdb/requirements.txt
+++ b/api_yamdb/requirements.txt
@@ -1,20 +1,29 @@
 appnope==0.1.2
+asgiref==3.2.10
 asttokens==2.0.5
 attrs==21.4.0
 backcall==0.2.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
+coreapi==2.3.3
+coreschema==0.0.4
 decorator==5.1.1
 Django==2.2.16
 django-filter==21.1
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==5.1.0
+drf-yasg==1.21.4
 executing==0.8.3
 flake8==4.0.1
+gunicorn==20.0.4
 idna==3.3
+inflection==0.5.1
 iniconfig==1.1.1
+itypes==1.2.0
 jedi==0.18.1
+Jinja2==3.1.2
+MarkupSafe==2.1.1
 matplotlib-inline==0.1.3
 mccabe==0.6.1
 packaging==21.3
@@ -24,6 +33,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 pluggy==0.13.1
 prompt-toolkit==3.0.28
+psycopg2-binary==2.8.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
 py==1.11.0
@@ -38,13 +48,13 @@ pytest-pythonpath==0.7.3
 python-dotenv==0.19.2
 pytz==2021.3
 requests==2.26.0
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
 six==1.16.0
 sqlparse==0.4.2
 stack-data==0.2.0
 toml==0.10.2
 traitlets==5.1.1
+uritemplate==4.1.1
 urllib3==1.26.8
 wcwidth==0.2.5
-asgiref==3.2.10
-gunicorn==20.0.4
-psycopg2-binary==2.8.6
