--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -1,14 +1,10 @@
-name: api_yamdb workflow
+name: yamdb_workflow
 
-on:
-  push:
-    branches:
-      - master
-    
+on: [push]
+
 jobs:
   tests:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
@@ -19,19 +15,17 @@ jobs:
     - name: Install dependencies
       run: | 
         python -m pip install --upgrade pip 
-        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort pytest
+        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
         pip install -r api_yamdb/requirements.txt
-
-    - name: Test with flake8 and django tests
+    - name: Test with flake8 and pytest
       run: |
         python -m flake8
         pytest
-
+    
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
-    if: github.ref == 'refs/heads/master'
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2 
@@ -45,15 +39,13 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2 
         with:
+          context: api_yamdb 
           file: api_yamdb/Dockerfile
-          context: api_yamdb/
           push: true
           tags: ignatdan/api_yamdb:latest 
-
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
-    if: github.ref == 'refs/heads/master' || 'refs/heads/main'
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
@@ -61,11 +53,11 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
+            sudo docker pull ignatdan/api_yamdb
             sudo docker-compose stop
             sudo docker-compose rm web
-            rm .env
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
@@ -73,10 +65,7 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            ls
-            pwd
-            sudo docker-compose up -d --build
-
+            sudo docker-compose up -d
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
@@ -84,6 +73,6 @@ jobs:
     - name: send message
       uses: appleboy/telegram-action@master
       with:
-        to: ${{ secrets.TELEGRAM_ID }}
+        to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: ${{ github.workflow }} успешно выполнен!
+        message: ${{ github.workflow }} успешно выполнен! 
