--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     env_file:
       - ./.env
   web:
-    image: ignatdan/api_yamdb:v1.05.2022
+    image: ignatdan/api_yamdb:latest
     restart: always
     volumes:
       - static_value:/app/static/
